--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-map-gl",
+  "name": "@yilumi/react-map-gl",
   "description": "React components for Mapbox GL JS-compatible libraries",
-  "version": "7.1.6",
+  "version": "0.1.1",
   "keywords": [
     "mapbox",
     "mapbox-gl",
@@ -11,7 +11,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/visgl/react-map-gl.git"
+    "url": "https://github.com/yilumi/react-map-gl.git"
   },
   "license": "MIT",
   "types": "dist/esm/index.d.ts",
