--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@yilumi/react-map-gl",
   "description": "React components for Mapbox GL JS-compatible libraries",
-  "version": "0.1.1",
+  "version": "0.1.3",
   "keywords": [
     "mapbox",
     "mapbox-gl",
@@ -21,6 +21,7 @@
     "src",
     "dist",
     "maplibre",
+    "sg-map-team",
     "README.md"
   ],
   "scripts": {
@@ -42,7 +43,7 @@
   },
   "peerDependencies": {
     "mapbox-gl": ">=1.13.0",
-    "maplibre-gl": ">=1.13.0",
+    "maplibre-gl": ">=0.1.0",
     "react": ">=16.3.0",
     "react-dom": ">=16.3.0"
   },
@@ -58,7 +59,7 @@
     "@types/react": "^16.0.0",
     "jsdom": "^16.5.0",
     "mapbox-gl": "^2.14.0",
-    "maplibre-gl": "^2.4.0",
+    "maplibre-gl": "npm:@yilumi/maplibre-gl@^0.1.0",
     "ocular-dev-tools": "2.0.0-alpha.13",
     "pre-commit": "^1.2.2",
     "react": "^18.0.0",
